--- a/cdm/prompts/full_info/user.j2
+++ b/cdm/prompts/full_info/user.j2
@@ -1,7 +1,7 @@
 Provide the most likely final diagnosis of the following patient.
 
 @@@ PATIENT HISTORY @@@
-{{ history_of_present_illness | trim }}
+{{ patient_history | trim }}
 
 {%- if physical_examination %}
 
