Add multiple LLMs

--- a/cdm/prompts/cdm/system.j2
+++ b/cdm/prompts/cdm/system.j2
@@ -3,6 +3,6 @@ You are a medical artificial intelligence assistant. You give helpful, detailed 
 Use available tools to request information.
 {%- if pydantic_schema %}
 
-Answer in JSON using this schema:
+Output only a JSON object that strictly follows the provided schema. Do not include anything else!
 {{ pydantic_schema }}
 {% endif -%}
